Colaboratory を使用して作成しました

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -454,7 +454,7 @@
         "id": "nwyYSKBqrKFc"
       },
       "source": [
-        "# CUDA_VISIBLE_DEVICES=0 python3 train.py config/class_Q2.yaml"
+        "# ! CUDA_VISIBLE_DEVICES=0 python3 train.py config/class_Q2.yaml"
       ],
       "execution_count": null,
       "outputs": []
@@ -562,7 +562,7 @@
         "id": "N67kil3arKFd"
       },
       "source": [
-        "# CUDA_VISIBLE_DEVICES=0 python3 train_seg.py config/seg_Q2.yaml"
+        "# ! CUDA_VISIBLE_DEVICES=0 python3 train_seg.py config/seg_Q2.yaml"
       ],
       "execution_count": null,
       "outputs": []
@@ -803,7 +803,7 @@
       "source": [
         "## Classification based on segmentation\n",
         "得たcrop sizeを用いてtest dataの分類を行う.  \n",
-        "```./submission_csv```に予測ファイルが保存されます."
+        "```./submission_csv/CONFIG_NAME.csv```に予測ファイルが保存されます."
       ]
     },
     {
@@ -928,7 +928,7 @@
         "学習済みモデルを用意していますが, 検証が必要であれば再学習させてください.   \n",
         "その際は, weightなどが上書きされないよう, configのファイル名を変更してから実行してください.  \n",
         "(1 foldで2000epoch程度かかるので, GPUによっては学習に数日を要すると思います..., ですので, 検証の際は1つのfoldを試してvalidation score0.9程度が達成可能であることを確認する程度で十分だと思われます.)  \n",
-        "```./checkpoints```にweight, ```./logs```にlossなどがplotされたファイル, ```result```に予測の一部が保存されます."
+        "```./checkpoints``` に weight, ```./logs``` にlossなどがplotされたファイル,  ```result``` に予測の一部が保存されます."
       ]
     },
     {
