--- a/solution.ipynb
+++ b/solution.ipynb
@@ -965,6 +965,27 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t3ybFrJ6aOYX"
+      },
+      "source": [
+        "## zip\n",
+        "検証のために再学習させた場合はそちらのconfigを指定してください.   "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XrCZT0eQaEyu"
+      },
+      "source": [
+        "! pack.py config/seg_Q3.yaml"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
