--- a/solution.ipynb
+++ b/solution.ipynb
@@ -38,7 +38,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/IsHYuhi/FujiFilm_Brains/blob/dev%2Fsolutions/solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/IsHYuhi/FujiFilm_Brains_Solution/blob/dev%2Fsolutions/solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -893,7 +893,7 @@
         "いただいたデータの, ```./annotation``` から ```.DS_Store``` と ```C(W|D|P)``` に含まれていないものを除外しました.\n",
         "また訓練画像において ```C(W|D|P)``` に含まれている画像をまとめた ```./all_C_data``` を作成いたしました.\n",
         "\n",
-        "推論時はsliding window(stride=128)で再構築した画像全体に対して予測をしています.\n",
+        "推論時はsliding window(stride=128)で再構築した画像全体に対して予測をしています. またQ2で予測したPコン跡を減算しています.\n",
         "\n",
         "## Segmentation model sumarry \n",
         "* config: seg_Q3.yaml\n",
@@ -920,7 +920,10 @@
         "  \n",
         "### Score\n",
         "segmentation model (all fold, threshold>0.5)\n",
-        "* LB: 0.4256"
+        "* LB: 0.4256\n",
+        "\n",
+        "subtraction PCON using segmentation map from Q2\n",
+        "* LB: 0.4462"
       ]
     },
     {
@@ -967,7 +970,7 @@
         "id": "2aFwMekvrKFf"
       },
       "source": [
-        "# ! CUDA_VISIBLE_DEVICES=0 python3 segmentation_inference.py config/seg_Q3.yaml --threshold 0.5"
+        "# ! CUDA_VISIBLE_DEVICES=0 python3 segmentation_inference.py config/seg_Q3.yaml --threshold 0.5 --sub-pcon seg_Q2 --save-full-image"
       ],
       "execution_count": null,
       "outputs": []
