--- a/solution.ipynb
+++ b/solution.ipynb
@@ -58,7 +58,8 @@
         "id": "C_bJ8XNvsbbp"
       },
       "source": [
-        "# リポジトリのクローン"
+        "# リポジトリのクローン\n",
+        "tokenは30日間有効です."
       ]
     },
     {
@@ -68,23 +69,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fb5MhWfnsatj",
-        "outputId": "1a43643c-667c-4eba-c39e-71a56a3ec5b9"
+        "outputId": "dfaa8fcc-3e62-4be2-b572-f1996ae5239f"
       },
       "source": [
-        "! git clone https://github.com/IsHYuhi/FujiFilm_Brains.git"
+        "! git clone https://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@github.com/IsHYuhi/FujiFilm_Brains_Solution.git"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'FujiFilm_Brains'...\n",
-            "remote: Enumerating objects: 188, done.\u001b[K\n",
-            "remote: Counting objects: 100% (188/188), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (145/145), done.\u001b[K\n",
-            "remote: Total 188 (delta 89), reused 75 (delta 27), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (188/188), 782.78 KiB | 3.16 MiB/s, done.\n",
-            "Resolving deltas: 100% (89/89), done.\n"
+            "Cloning into 'FujiFilm_Brains_Solution'...\n",
+            "remote: Enumerating objects: 196, done.\u001b[K\n",
+            "remote: Counting objects: 100% (196/196), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (151/151), done.\u001b[K\n",
+            "remote: Total 196 (delta 94), reused 77 (delta 29), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (196/196), 830.64 KiB | 3.30 MiB/s, done.\n",
+            "Resolving deltas: 100% (94/94), done.\n"
           ],
           "name": "stdout"
         }
@@ -97,17 +98,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FvrmdF08tEb9",
-        "outputId": "e0216fb6-af38-4693-bff3-0c3ebaa2aeba"
+        "outputId": "1aea835b-b05d-4824-dabe-b2a4737d18ff"
       },
       "source": [
-        "cd FujiFilm_Brains"
+        "cd FujiFilm_Brains_Solution"
       ],
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/FujiFilm_Brains\n"
+            "/content/FujiFilm_Brains_Solution\n"
           ],
           "name": "stdout"
         }
@@ -120,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PROtewPttIEL",
-        "outputId": "35dab7d3-c7d8-4905-eaf8-1643f4a4082c"
+        "outputId": "743adfc9-65fc-40aa-903c-2f10fa9d7c4e"
       },
       "source": [
         "! ls"
@@ -493,17 +494,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dyh9WyQXF2ol",
-        "outputId": "4bdbf533-4142-4889-ca41-509b779970aa"
+        "outputId": "1534f4d9-87fe-4c78-d4cf-dabacb3b1630"
       },
       "source": [
-        "cd FujiFilm_Brains"
+        "cd FujiFilm_Brains_Solution"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/FujiFilm_Brains\n"
+            "/content/FujiFilm_Brains_Solution\n"
           ],
           "name": "stdout"
         }
@@ -710,7 +711,7 @@
         "### inference\n",
         "出力結果も用意されていますが, 要検証であれば再実行してください.  \n",
         "検証のために再学習させた場合はそちらのconfigを指定してください.   \n",
-        "```./submission_csv```に予測ファイルが保存されます."
+        "```./submission_csv/CONFIG_NAME.csv```に予測ファイルが保存されます."
       ]
     },
     {
