--- a/solution.ipynb
+++ b/solution.ipynb
@@ -823,7 +823,7 @@
         "## inference (segmentation)\n",
         "出力結果も用意されていますが, 要検証であれば再実行してください.  \n",
         "検証のために再学習させた場合はそちらのconfigを指定してください.   \n",
-        "```./submission_segmentation/CONFIG_NAME.csv```に予測ファイルが保存されます.  \n",
+        "```./submission_segmentation/CONFIG_NAME_full```に予測マップが保存されます.  \n",
         "実行に数時間を要するので, こちらもまた必要に応じてでお願いいたします."
       ]
     },
